# colossal-cave-adventure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Backlog.txt  avr-libc-user-manual.txt
include/: action_descriptions.h  actions.h  actions_descriptions.h  advcave.h  advdec.h  advdef.h  advent.h  advent1.h  advent2.h  advent3.h  advent4.h  cave_travel_array.h  caves.h  cca_helper.h  global_declarations.h  global_definitions.h  input_queue.h  long_location_descriptions.h  long_locations.h  object_descriptions.h  objects.h  proto.h  setup_advent.h  setup_adventure.h  short_location_descriptions.h  short_locations.h
src/: action_descriptions.c  actions.c  actions_descriptions.c  advent.c  cave_travel_array.c  caves.c  colossal_cave_adventure.c  database.c  english.c  init_adventure.c  input_queue.c  intransitive_verb.c  itverb.c  long_location_descriptions.c  long_locations.c  mcu_advent.c  objects.c  setup_advent.c  setup_adventure.c  short_locations.c  simple_english_helper.c  transitive_verb.c  turn.c  verb.c  word_code_table.c
tests/: _input_queue.c  _long_locations.c  string_db_conversion.c
tests/_include/: _proto.h  advcave.h  advent1.h  advent2.h  advent3.h  advent4.h  advword.h
tests/_src/: _flash_helper.c
